feat: add login + jwt token